--- a/package.json
+++ b/package.json
@@ -6,28 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint src"
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "lucide-react": "^0.408.0",
+    "lucide-react": "^0.575.0",
     "next": "^16.1.6",
     "next-intl": "^4.8.3",
     "next-themes": "^0.4.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.4",
     "@tailwindcss/postcss": "^4.2.1",
-    "@types/node": "^22",
+    "@types/node": "^25.3.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9.39.3",
     "eslint-config-next": "16.1.6",
     "postcss": "^8",
     "tailwindcss": "^4.2.1",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
