--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src"
+    "lint": "biome check src",
+    "format": "biome check --write src"
   },
   "dependencies": {
     "clsx": "^2.1.1",
@@ -24,8 +25,6 @@
     "@types/node": "^25.3.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9.39.3",
-    "eslint-config-next": "16.1.6",
     "postcss": "^8",
     "tailwindcss": "^4.2.1",
     "typescript": "^5.9.3"
